--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx
+  name: react-demo
   namespace: demo
 spec:
-  replicas: 4
+  replicas: 1
   selector:
     matchLabels:
-      app: nginx
+      app: react-demo
   template:
     metadata:
       labels:
-        app: nginx
+        app: react-demo
     spec:
       containers:
-        - name: nginx
-          image: nginx:latest
+        - name: react-demo
+          image: react-demo:latest
           ports:
             - containerPort: 80
