--- a/service.yaml
+++ b/service.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: react-demo
   namespace: demo
 spec:
   selector:
-    app: nginx
+    app: react-demo
   ports:
     - port: 80
       targetPort: 80
+  type: NodePort
