Deploy React app via Docker image

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,5 +16,6 @@ spec:
       containers:
         - name: react-demo
           image: react-demo:latest
+          imagePullPolicy: Never
           ports:
             - containerPort: 80
